fixed up opacity, centering, spacing on signin page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,9 +9,10 @@ body{
 }
 
 
-
+/*signin page*/
 .title_styling {
-    color: rgba(48, 48, 48, 0.85);
+    color: rgba(48, 48, 48, 0.9);
+    padding-top: 20px;
 }
 
 .signin_styling {
@@ -32,8 +33,9 @@ body{
   display:inline-block;
   margin: auto;
   text-align: center;
-
+  color:white;
 }
+
 #sign-in-form {
   border: 1px solid black;
   border-radius: 10px;
@@ -41,6 +43,14 @@ body{
   min-width: 0;
   background-color: rgba(53, 59, 64, 0.7);
   color: rgba(249,249,239);
+}
+
+.signin_title {
+  color: white;
+}
+
+.signup_link {
+  color: white;
 }
 
 /*score_input*/
